--- a/index.html
+++ b/index.html
@@ -232,7 +232,12 @@
           </div>
           <div class="three-grids-columns">
             <!--<span class="fa fa-camera"></span>
-					<h4>Photography</h4>
+					 <h4> 2016- 2017</h4>
+            <p>Science and Mathematics
+
+              I've completed my schooling from Pioneer senior secondary school with a good percentage. I've studied
+              the all Subject and gave all my best to it.</p>
+<h4>Photography</h4>
 					<p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc</p>
 					-->
           </div>
